# sqeq

./: .gitignore  CMakeLists.txt  README.md  input_coeffs.txt
eq_app/: CMakeLists.txt  main.cpp
eq_lib/: CMakeLists.txt  cbeq.cpp  cbeq.h  cmd_reader.cpp  cmd_reader.h  eq.cpp  eq.h  eq_factory.cpp  eq_factory.h  eq_params.cpp  eq_params.h  factory.cpp  factory.h  file_reader.cpp  file_reader.h  inheritance_test.cpp  inheritance_test.h  lneq.cpp  lneq.h  parse.cpp  parse.h  printer.cpp  printer.h  queq.cpp  queq.h  reader.h  reader_factory.cpp  reader_factory.h  solve.cpp  solve.h  sqeq.cpp  sqeq.h  utils.cpp  utils.h
eq_tests/: CMakeLists.txt  cbeq_tests.cpp  cmd_reader_tests.cpp  coeffs.txt  eq_factory_tests.cpp  factory_tests.cpp  file_reader_tests.cpp  lneq_tests.cpp  parse_tests.cpp  printer_tests.cpp  queq_tests.cpp  reader_factory_tests.cpp  tests.cpp
integration_tests/: test_integration.py
sqeq_app/: CMakeLists.txt  main.cpp
sqeq_lib/: CMakeLists.txt  sqeq.cpp  sqeq.h
sqeq_tests/: CMakeLists.txt  tests.cpp
